test/regression/sema/valid/if_else_return.tc
int choose(int x) {
    if (x) {
        return 1;
    } else {
        return 2;
    }
}

int main() {
    return choose(0);
}
