test/regression/sema/invalid/missing_return.tc
int f(int x) {
    if (x) {
        return 1;
    }
}

int main() {
    return f(0);
}
